--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>JKM Generator</title>
         <meta name="description" content="Generator wypowiedzi Janusza Korwin-Mikkego">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style.css">
 
     </head>
